--- a/static/Home.css
+++ b/static/Home.css
@@ -31,9 +31,9 @@ color: white;
         padding: 0;
         height: 100vh;
         background-image: url('OIP.jpg');
-        background-size: cover; /* Faz a imagem cobrir todo o fundo */
-        background-position: center; /* Centraliza a imagem */
-        background-repeat: no-repeat; /* Impede que a imagem se repita */
+        background-size: cover; 
+        background-position: center; 
+        background-repeat: no-repeat;
     
     
    
