--- a/static/dados.css
+++ b/static/dados.css
@@ -19,17 +19,17 @@ table{
              button {
                 margin-top: 75px;
                 padding: 10px 20px;
-                background-color: #333; /* Tom mais escuro de preto */
+                background-color: #333; 
                 color: white;
                 border: none;
                 cursor: pointer;
                 border-radius: 5px;
-                transition: background-color 0.3s; /* Adicionando uma transição suave na mudança de cor de fundo */
+                transition: background-color 0.3s; 
                 margin-bottom: 20px;
                 
             }
             
             button:hover {
-                background-color: #555; /* Tom mais escuro quando o mouse passa sobre o botão */
+                background-color: #555; 
             }
             
