--- a/Templates/vitoria.html
+++ b/Templates/vitoria.html
@@ -10,7 +10,7 @@
     <div id="texto">
     <h1>Parabens você venceuuuu 
     <h2>As Alternarivas Eram : </h2>
-    <p>{{op}} {{op2}} {{op3}}</p></div>
+    <p>B, A, C</p></div>
     <div id="img"><img src="../static/victory.png" alt=""></div>
     <h1 id="texto2">"Cada batalha vencida é um passo em direção a vencer  guerra"</h1>
    
